[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiwiki"
version = "0.1.0"
license = {file = "LICENSE"}
requires-python = ">= 3.13"
dependencies = ["beautifulsoup4", "requests"]

[project.optional-dependencies]
dev = ["ruff", "pyright"]

[project.scripts]
sw_compdocs = "wikiwiki:main"

[tool.ruff]
exclude = []
respect-gitignore = true

[tool.ruff.lint]
select = ["F", "ANN0", "ANN2", "ANN4", "RUF1", "RUF2"]

[tool.pyright]
include=["*.py"]
pythonPlatform="All"
typeCheckingMode="strict"
reportPrivateUsage="none"
